DTSCCI-788 add camename in ga for manage case